tests/parsing/smtlib/v2.6/errors/023_var_binding_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/023_var_binding_unclosed_1.smt2", line 2, character 20-21:
2 | (assert (let ((x 42 _)) (= x 2)))
                        ^
Error while parsing a variable binding, read the reserved word '_',
      but expected a closing parenthesis.
